# bq_eda_toolkit

./: LICENSE  __init__.py  analysis_context.py  bigquery_visualizer.py  feature_advice.py  pipeline.py  pyproject.toml  readme.md  requirements.txt  validation.py
notebooks/: eda_walkthhrough.ipynb
stages/: __init__.py  base.py  comparison.py  core_stages.py  validation.py
tests/: test_bivariate_stage.py  test_dataset_comparison_stage.py  test_distribution_fit.py  test_execute_query_guard.py  test_feature_advice.py  test_generate_splits.py  test_histogram_kde.py  test_missingness.py  test_multivariate_stage.py  test_numeric_covariances.py  test_numeric_stats.py  test_partial_dependence.py  test_pipeline.py  test_quality_stage.py  test_rep_sample.py  test_rep_sample_stage.py  test_sql_helpers.py  test_target_stage.py  test_univariate_stage.py  test_validation_stage.py  test_visualizer_init.py
utils/: bq_executor.py
